webapp/titanembeds/static/css/embedstyle.css
/* ... */
@media only screen and (min-width: 400px) {
  #visitor_mode_message_note {
    display: inline;
  }
}

#focusmodal {
  background-color: rgba(84, 110, 122, 0.58);
  text-shadow: 1px 1px 2px black, 0 0 1em #607d8b, 0 0 0.2em #b0bec5;
}

.message_emoji {
  height: 20px;
}

.message_emoji:hover {
  cursor: pointer;
}

#chatcontent .message_emoji:hover {
  height: 30px;
}

/*.chatusername {*/
/*  display: table-header-group;*/
/*}*/
.chatmessage {
  display: block;
  color: #C3C4C5;
  color: var(--chatmessage);
  margin-top: 5px;
}

p.mentioned {
  font-weight: bold;
  font-style: italic;
}

p.mentioned span.chatmessage {
  color: #ff5252;
}

.chatmessage code {
  background-color: rgba(0, 0, 0, 0.1);
  color: lightgray;
  border-radius: 5px;
  padding: 2px;
}

.chatmessage code.blockcode {
  width: 100%;
  display: inline-block;
  white-space: pre-wrap;
  line-height: 15px;
  padding: 5px;
  margin-bottom: 3px;
}

.chatmessage .channellink, .chatmessage .discordmention {
  border-radius: 5px;
  background-color: rgba(0, 0, 0, 0.2);
  color: #82b1ff;
  cursor: pointer;
}

.chatmessage .channellink:hover, .chatmessage .discordmention:hover {
  background-color: rgba(0, 0, 0, 0.5);
  color: white;
}

.embeds {
  display: block;
  width: 60%;
}

@media(max-width: 600px) {
  .embeds {
    width: 100%;
  }
}

.richembed {
  display: flex;
  border: solid 1px grey;
  background-color: rgba(0, 0, 0, 0.1);
  border-radius: 10px;
  overflow: hidden;
  margin-top: 3px;
}

.richembed .color {
  width: 6px;
  background-color: #cacbce;
}

.richembed .rich {
  margin: 10px;
  width: 100%;
}

.richembed img {
  border-radius: 5px;
}

.richembed .author img, .richembed .footer img {
  width: 20px;
  border-radius: 100px;
  vertical-align: bottom;
}

.richembed .description {
  white-space: pre-line;
}

.richembed .content {
  display: flex;
}

.richembed .innercontent {
  width: 100%;
}

.richembed .thumbnail {
  margin-left: 2px;
}

.richembed .thumbnail img {
  width: 100%;
  max-width: 170px;
}

.richembed .thumbnail img.materialboxed.active {
  max-width: none;
}

.richembed .fields {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

.richembed .field-name {
  font-weight: bold;
}

.richembed .field {
  flex: 0;
  min-width: 100%;
}

.richembed .field.inline {
  flex: 1;
  flex-basis: auto;
  min-width: 100px;
}

@media(max-width: 600px) {
  .richembed .field.inline {
    flex: 0;
    flex-basis: unset;
    min-width: 100%;
  }
}

.richembed .image img {
  max-width: 300px;
  width: 100%;
}

.richembed .image img.materialboxed.active {
  max-width: none;
}

#chatcontent img.attachment {
  width: 100%;
  max-width: 300px;
  max-height: 300px;
  object-fit: contain;
  display: block;
}

#chatcontent img.attachment.materialboxed.active {
  max-width: none;
  max-height: none;
}

#emoji-picker {
  color: black;
  position: fixed;
  bottom: 12%;
  right: 1%;
  z-index: 500;
  width: 350px;
  height: 110px;
  max-width: 80%;
  max-height: 80%;
  background-color: #eceff1;
  border-radius: 5px;
  display: none;
}

#emoji-picker-content {
  overflow: auto;
  height: 100%;
  padding: 5px;
  padding-top: 0;
}

#emoji-picker h6 {
  font-weight: bold;
}

#emoji-tray-toggle {
  position: absolute;
  width: 10px;
  height: 10px;
  top: 14px;
  right: 30px;
}

#emoji-tray-toggle > .btn-floating {
  width: 30px;
  height: 30px;
}

#emoji-tray-toggle > .btn-floating > i {
  line-height: 0;
  position: relative;
  top: -5px;
}

#usercard .avatar {
  width: 100%;
  max-width: 120px;
}

#usercard .identity {
  display: inline;
  vertical-align: sub;
}

#usercard .identity .hash, #usercard .identity .discriminator {
  font-size: 1.30rem;
}

#usercard .bottag {
  background-color: #5DADE2;
  padding: 5px;
  border-radius: 10px;
  font-weight: bold;
  margin-left: 7px;
  font-size: 10pt;
}

#usercard .role .bubble {
  color: #cacbce;
  border: 1px solid;
  border-color: inherit;
  border-radius: 10px;
}

#usercard .role .text, #usercard .role .color {
  margin-left: 5px;
  margin-right: 5px;
}

#usercard .role .color {
  display: inline-block;
  width: 10px;
  height: 10px;
  background-color: #cacbce;
  margin-right: 0;
  border-radius: 10px;
}

#usercard .role .text {
  color: lightgray;
}

#usercard .game {
  font-weight: bold;
}

#usercard .game .text {
  font-weight: normal;
}

#usercard .badges .discordbotsorgvoted {
  color: yellow;
}

#usercard .badges .supporter {
  color: limegreen;
}

#usercard .badges .administrator {
  color: hotpink;
}

#usercard .badges .partner {
  color: orange;
}

#google-recaptcha {
  margin: 0 auto;
  width: 302px;
}

#logout_btn, #proceed_nsfw_btn {
  background-color: red;
}

#nsfwmodal i {
  color: yellow;
}

#message-spinner {
  position: fixed;
  top: 50%;
  left: 50%;
  margin-top: -30vh;
  margin-left: -5vw;
  display: none;
}

#message-spinner > div {
  background-color: white;
}

#message-spinner.error > div {
  background-color: pink;
}

/* CSS Variables */
:root {
  /*--<var>: <value>*/
  --modal: #546E7A;
  --noroleusers: #ECEFF1;
  --main: #455A64;
  --placeholder: #636363;
  --sidebardivider: #90A4AE;
  --leftsidebar: #607D8B;
  --rightsidebar: #607D8B;
  --header: #263238;
  --chatmessage: #C3C4C5;
  --discrim: #FFFFFF;
  --chatbox: #37474F;
}

